--- a/bkup/box.html
+++ b/bkup/box.html
@@ -10,9 +10,11 @@
  <body>
 
    <div class="left-sidebar">
-     <a href="#"><button class="fa fa-align-left"></button></a>
+	  <a href="#"><button class="fa fa-align-left"></button></a>
 	<br><br><br><br><br>
-<a class="v-centered2" href="#"><button class="fa fa-th-large"></button></a>
+
+
+    	<a class="v-centered2" href="#"><button class="fa fa-th-large"></button></a>
          	<a><button class="fa fa-square-o"></button></a>
 	<a class="v-centered" href="#"><button class="fa fa-th-large"></button></a>
 
@@ -24,19 +26,17 @@
    </div>
    <div class = "top-nav">
 
-
+	<div>
 	<button id="bu" type="submit"><i class="search-icon fa fa-search"></i></button>
      <input class = "search" type = "text" value = "Search..."/>
-     <b><font color="#749EFF">{&nbsp;</font>Code<font color="#749EFF">Cloud&nbsp;}</font></b>
+     
 
 	<div class="notification">
 	<a href="#"><button class="fa fa-bell-o"></button></a>
 	<div class ="top-img-nav">
 		<img src="profile.png" class ="top-img"/>
 	</div>
-</div>
-<div class="login">
-Hello, Ahmad
+
 </div>
 </div>
 </div>
@@ -46,7 +46,7 @@ Hello, Ahmad
 		<div class ="mid-content">
 		<b>Workspaces</b>
 		</div><br>
-
+		
         <div class ="buttons">
 	   <button class="button1 button1">Add Workspace</button>
 	   </div>
@@ -61,7 +61,7 @@ Hello, Ahmad
 	<br><br><br>
        </div>
 
-<div class="cardscontent" >
+<div class="cardscontent" > 
 <div class="card" style="display:inline-block;vertical-align:top;">
  <div class="card-content">
        <div class ="buttons">
@@ -96,7 +96,7 @@ Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</f
 	<br>
 	<div class = "small-content">
 	Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
-  Build a digital marketing website <br>using Phyton language,lorem<br>
+  Build a digital marketing website <br>using Phyton language,lorem<br>	
 	</div>
 </div>
  <div class ="buttons">
@@ -121,7 +121,7 @@ Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</f
 	<div class = "small-content">
 Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
   Build a digital marketing website <br>using Phyton language,lorem<br>
-<br>
+<BR>
 1 GB&emsp;&emsp;20 GB
 	</div>
 </div>
@@ -142,7 +142,7 @@ Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</f
 	<br>
 	<div class = "small-content">
 	Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
-  Build a digital marketing website <br>using Phyton language,lorem<br>
+  Build a digital marketing website <br>using Phyton language,lorem<br>	
 	</div>
 </div>
  <div class ="buttons">
@@ -167,7 +167,7 @@ Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</f
 	<div class = "small-content">
 Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
   Build a digital marketing website <br>using Phyton language,lorem<br>
-<br>
+<BR>
 1 GB&emsp;&emsp;20 GB&emsp;<img src = "download1.jpeg" class="overlap">
 	</div>
 </div>
@@ -187,7 +187,7 @@ Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</f
 	<br>
 	<div class = "small-content">
 	Phyton workspace &emsp;&emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
-  Build a digital marketing website <br>using Phyton language,lorem<br>
+  Build a digital marketing website <br>using Phyton language,lorem<br>	
 	</div>
 </div>
  <div class ="buttons">
