--- a/ui3.html
+++ b/ui3.html
@@ -5,18 +5,18 @@
      UI Design
    </title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <link rel="stylesheet" href="flex2.css">
+   <link rel="stylesheet" href="index.css">
 
  </head>
  <body>
-
+   
    <div class="left-sidebar">
 	  <a href="#"><button class="fa fa-align-left"></button></a>
 	<br><br><br><br><br>
+    		
 
-
-    	<a class="v-centered2" href="#"><button class="fa fa-th-large"></button></a>
-         	<a><button class="fa fa-square-o"></button></a>
+    	<a class="v-centered" href="#"><button class="fa fa-th-large"></button></a>
+         	<a><button class="fa fa-square-o"></button></a> 
 	<a class="v-centered" href="#"><button class="fa fa-th-large"></button></a>
 
 	<a href="#"><button class="fa fa-google green"></button></a>
@@ -30,44 +30,37 @@
 	<div>
 	<button id="bu" type="submit"><i class="search-icon fa fa-search"></i></button>
 	<input class = "search" type = "text" value = "Search..."/>
-
-	<!--<p>{CodeCloud}</p>-->
+	
+	<!--<p>{CodeCloud}</p>-->		
 	<div class="notification">
 	<a href="#"><button class="fa fa-bell-o"></button></a>
-	<div class ="top-img-nav">
-		<img src="profile.png" class ="top-img"/>
-	</div>
-
+	
 </div>
-</div>
+</div>   
 </div>
   <div class = "section-2">
 	<div class = "content">
-		<button class="fa fa-square-o"></button>
+		<button class="fa fa-square-o"></button> 
 		   <div class ="buttons">
 	   <button class="button1 button1">Add Workspace</button>
 	   </div>
-	<br><br><br>
        </div>
-      <div class="parent-wrapper">
-    <div class="parent">
-      <div class="child">
-
-      </div>
-      <div class="child"></div>
-      <div class="child"></div>
-     </div>
+     <div class="row">
+  <div class="column1">
+    <h2>Column 1</h2>
+    <p>Some text..</p>
   </div>
-  <div class="parent-wrapper">
-<div class="parent">
-  <div class="child">
+  <div class="column2">
+    <h2>Column 2</h2>
+    <p>Some text..</p>
   </div>
-  <div class="child"></div>
-  <div class="child"></div>
- </div>
+  <div class="column3">
+    <h2>Column 3</h2>
+    <p>Some text..</p>
+  </div>
+</div>
 </div>
 
-</div>
 
  </body>
 </html>
