--- a/box-bkup.html
+++ b/box-bkup.html
@@ -7,40 +7,29 @@
    </title>
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <link rel="stylesheet" href="box2.css">
+   <link rel="stylesheet" href="box2-bkup.css">
  </head>
  <body>
 
    <div class="left-sidebar">
+    <ul>
+    <li>
      <a href="#"><button class="fa fa-align-left"></button></a>
-
-	<br><br><br>
-  <div>
+  </li>
+	
 <a class="v-centered2" href="#"><button class="fa fa-th-large"></button></a>
-</div>
-<div>
-         	<a><button class="fa fa-square-o"></button></a>
-</div>
-
-<div>
-  <a class="v-centered" href="#"><button class="fa fa-th-large"></button></a>
-</div>
-
-<div>
-	<a href="#"><button class="fa fa-users"></button></a>
-</div>
-
-<div>
-    	<a class="v-centered" href="#"><button class="fa fa-cog"></button></a>
-</div>
-
-<div>
-<a href="#"><button class="fa fa-headphones"></button></a>
-</div>
-
-<div>
+  <li>       	<a><button class="fa fa-square-o"></button></a>
+</li>
+	<li><a class="v-centered" href="#"><button class="fa fa-th-large"></button></a>
+</li>
+	<li><a href="#"><button class="fa fa-users"></button></a>
+	</li>    	
+<li><a class="v-centered" href="#"><button class="fa fa-cog"></button></a>
+    </li>
+    <li>		<a href="#"><button class="fa fa-headphones"></button></a>
+</li>
 <a href="#"><button class="fa fa-list-alt"></button></a>
-</div>
+ </ul>
    </div>
    <div class = "top-nav">
 
@@ -66,12 +55,10 @@ Hello, Ahmad
 		<button class="fa fa-square-o"></button>
 		<div class ="mid-content">
 		<b>Workspaces</b>
-		</div><br>
+		</div>
 
         <div class ="buttons">
-	   <button class="button1">Add Workspace</button>
-	   </div>
-  <div class="dropdown">
+<div class="dropdown">
     <select>
       <option value="0">All workspaces</option>
       <option value="1"></option>
@@ -79,6 +66,9 @@ Hello, Ahmad
       <option value="3"></option>
     </select>
   </div>
+	   <button class="button1">Add Workspace</button>
+	   </div>
+  
 	<br><br><br>
        </div>
 
