--- a/box-bkup.html
+++ b/box-bkup.html
@@ -11,25 +11,29 @@
  </head>
  <body>
 
-   <div class="left-sidebar">
-    <ul>
+   <div class="left-sidebar" id="left">
+    <ul id="myLinks">
     <li>
      <a href="#"><button class="fa fa-align-left"></button></a>
   </li>
-	
+
 <a class="v-centered2" href="#"><button class="fa fa-th-large"></button></a>
   <li>       	<a><button class="fa fa-square-o"></button></a>
 </li>
 	<li><a class="v-centered" href="#"><button class="fa fa-th-large"></button></a>
 </li>
 	<li><a href="#"><button class="fa fa-users"></button></a>
-	</li>    	
+	</li>
 <li><a class="v-centered" href="#"><button class="fa fa-cog"></button></a>
     </li>
     <li>		<a href="#"><button class="fa fa-headphones"></button></a>
 </li>
+<li>
 <a href="#"><button class="fa fa-list-alt"></button></a>
- </ul>
+<i class="fa fa-bars"></i>
+  </a>
+</li> 
+</ul>
    </div>
    <div class = "top-nav">
 
@@ -48,6 +52,9 @@
 <div class="login">
 Hello, Ahmad
 </div>
+<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>
 </div>
   <div class = "section-2">
@@ -57,7 +64,7 @@ Hello, Ahmad
 		<b>Workspaces</b>
 		</div>
 
-        <div class ="buttons">
+        <div class ="mid-buttons">
 <div class="dropdown">
     <select>
       <option value="0">All workspaces</option>
@@ -68,7 +75,7 @@ Hello, Ahmad
   </div>
 	   <button class="button1">Add Workspace</button>
 	   </div>
-  
+
 	<br><br><br>
        </div>
 
@@ -216,8 +223,15 @@ Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><b
 </div>
 <br><br>
 
-
-
-
  </body>
+<script>
+function myFunction() {
+  var x = document.getElementById("left");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
 </html>
