--- a/home/box-bkup.html
+++ b/home/box-bkup.html
@@ -35,8 +35,9 @@
 
 	<button id="search-button" type="submit"><i class="search-icon fa fa-search"></i></button>
      <input class = "search" type = "text" value = "Search..."/>
+     <div class="heading">
      <b><font color="#749EFF">{&nbsp;</font>Code<font color="#749EFF">Cloud&nbsp;}</font></b>
-
+     </div>
 	<div class="notification">
 	<!--<a href="#"><button class="fa fa-bell-o"></button></a>
 -->  <a href="#"><button class="fa fa-bell-o"><span class="badge-notify">4</span></button></a>
@@ -56,7 +57,9 @@ Hello, Ahmad
 </div>
   <div class = "section-2">
 	<div class = "content">
+                <div class ="content-button">
 		<button class="fa fa-square-o"></button>
+		</div>
 		<div class ="mid-content">
 		<b>Workspaces</b>
 		</div>
@@ -89,7 +92,7 @@ Hello, Ahmad
 	</div>
 	<br>
 	<div class = "small-content">
-Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
+Phyton workspace &emsp;&emsp;<font color="green">&#x25cf;RUNNING</font><br><br>
   Build a digital marketing website <br>using Phyton language,lorem<br>
 <br><br>
 1 GB&emsp;&emsp;20 GB&emsp;
@@ -114,7 +117,7 @@ Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><b
 	</div>
 	<br>
 	<div class = "small-content">
-	Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
+	Phyton workspace &emsp;&emsp;<font color="green">&#x25cf;RUNNING</font><br><br>
   Build a digital marketing website <br>using Phyton language,lorem<br>
 <br>
   </div>
@@ -143,7 +146,7 @@ Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><b
 	</div>
 	<br>
 	<div class = "small-content">
-Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
+Phyton workspace &emsp;&emsp;<font color="green">&#x25cf;RUNNING</font><br><br>
   Build a digital marketing website <br>using Phyton language,lorem<br>
 <br><br>
 1 GB&emsp;&emsp;20 GB
@@ -169,7 +172,7 @@ Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><b
 	</div>
 	<br>
 	<div class = "small-content">
-	Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
+	Phyton workspace &emsp;&emsp;<font color="green">&#x25cf;RUNNING</font><br><br>
   Build a digital marketing website <br>using Phyton language,lorem<br>
   <br>
 	</div>
@@ -197,7 +200,7 @@ Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><b
 	</div>
 	<br>
 	<div class = "small-content">
-Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
+Phyton workspace &emsp;&emsp;<font color="green">&#x25cf;RUNNING</font><br><br>
   Build a digital marketing website <br>using Phyton language,lorem<br>
 <br><br>
 1 GB&emsp;&emsp;20 GB&emsp;
@@ -222,7 +225,7 @@ Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><b
 	</div>
 	<br>
 	<div class = "small-content">
-	Phyton workspace &emsp;&emsp;&emsp;<font color="green">&#x25cf; RUNNING</font><br><br>
+	Phyton workspace &emsp;&emsp;<font color="green">&#x25cf;RUNNING</font><br><br>
   Build a digital marketing website <br>using Phyton language,lorem<br><br>
 	</div>
 </div>
