--- a/home/box-bkup.html
+++ b/home/box-bkup.html
@@ -61,7 +61,7 @@ Hello, Ahmad
 		<button class="fa fa-square-o"></button>
 		</div>
 		<div class ="mid-content">
-		<b>Workspaces</b>
+		<b>Workspaces</b><br>A worspace is where your projects live and run. Learn more.
 		</div>
 
         <div class ="mid-buttons">
@@ -73,7 +73,9 @@ Hello, Ahmad
       <option value="3"></option>
     </select>
   </div>
-	   <button class="button1">Add Workspace</button>
+	  <div class = "mid-buttons-1">
+<button class="button1">Add Workspace</button>
+</div>
 	   </div>
 
 	<br><br><br>
