--- a/home/box-bkup.html
+++ b/home/box-bkup.html
@@ -17,7 +17,7 @@
      <a href="#"><button class="fa fa-align-left"></button></a>
   </li>
 	
-<a class="v-centered2" href="#"><button class="fa fa-th-large"></button></a>
+<a class="v-centered" href="#"><button class="fa fa-th-large"></button></a>
   <li>       	<a><button class="fa fa-square-o"></button></a>
 </li>
 	<li><a class="v-centered" href="#"><button class="fa fa-th-large"></button></a>
