--- a/scss/new/page.html
+++ b/scss/new/page.html
@@ -38,11 +38,19 @@
     <span class="innerspan">Tasks</span>
 
 </li>
-	<li><a href="#"><button class="fa fa-list-ul button-class selected"></button></a>
-  <span class="innerspan">My List</span>
+</ul>
+<ul class = "inner-ul">
+
+<!--	<li class = "mylist"><a href="#"><button class="fa fa-list-ul button-class mylist"></button></a>
+
+ <span class ="innerspan"><input type = "text" placeholder="Add Name"/></span>
+  <span class="innerspan mylist-innerspan">My List</span>
+
 	</li>
-<li><a href="#"><button class="fa fa-plus button-class"></button></a>
-  <span class="innerspan">New List</span>
+-->
+
+<li class = "list-item"><a href="#"><button class="fa fa-plus side-button button-class"></button></a>
+  <input class="innerspan-input innerspan side-button" placeholder="New List"/  >
 
     </li>
 
