--- a/scss/new/page.html
+++ b/scss/new/page.html
@@ -101,14 +101,16 @@
   <button class="fa fa-clock-o button-class "></button>
 </div>
     <div class="inner-div-2">
-  <span>Remind Me</span>
+  <span class="dateTwo">Remind Me</span>
+  <input class="datetwoTwo" type ="date"/>
 </div>
 <br>
 <div class="inner-div-1">
 <button class="fa fa-calendar button-class "></button>
 </div>
 <div class="inner-div-2">
-<span>Add Due Date</span>
+<span class="dateOne">Add Due Date</span>
+<input class="dateoneOne" type ="date"/>
 </div>
 <br>
 <div class="inner-div-1">
@@ -123,10 +125,9 @@
 <br>
 <div class="right-top-content-four">
   <div class="content-4">
-  <span>Add Note...</span></div>
+  <textarea class="note" rows="4" cols="50" placeholder="Add a note..."></textarea>
+ </div>
 </div>
-<br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br>
 <div class="bottom-right">
   <div class="left-bottom-content-one">
     <div class="content">
