--- a/scss/new/page.html
+++ b/scss/new/page.html
@@ -49,8 +49,8 @@
 	</li>
 -->
 
-<li class = "list-item"><a href="#"><button class="fa fa-plus side-button button-class"></button></a>
-  <input class="innerspan-input innerspan side-button" placeholder="New List"/  >
+<li class = "list-item"><button class="fa fa-plus side-button button-class"></button>
+  <input class="innerspan-input innerspan side-button" placeholder="New List"/>
 
     </li>
 
