--- a/scss/new/page.html
+++ b/scss/new/page.html
@@ -49,8 +49,8 @@
 	</li>
 -->
 
-<li class = "list-item"><button class="fa fa-plus side-button button-class"></button>
-  <input class="innerspan-input innerspan side-button" placeholder="New List"/>
+<li class = "list-item"><button class="fa fa-plus side-button button-class"></button></a>
+  <input class="innerspan-input innerspan side-button" placeholder="New List"/  >
 
     </li>
 
@@ -141,7 +141,7 @@
 
 </div>
 </div>
-<script src="script.js"></script>
+<script src="script2.js"></script>
 
 </body>
 </html>
